--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,26 +54,19 @@ jobs:
     - name: Установка зависимостей для документации
       run: |
         python -m pip install --upgrade pip
-        pip install pydoc-markdown
     
     - name: Генерация документации
       run: |
-        # Создаём директорию для документации
-        mkdir -p docs
+        # Запускаем Python скрипт для генерации документации
+        python generate_docs.py
         
-        # Генерируем документацию из docstrings
-        pydoc-markdown -m calculator > docs/calculator.md
+        # Показываем что сгенерировано
+        echo "📚 Содержимое docs/:"
+        ls -la docs/
         
-        # Добавляем заголовок и дату
-        echo "# Документация проекта Calculator" > docs/README.md
-        echo "" >> docs/README.md
-        echo "**Дата обновления:** $(date '+%Y-%m-%d %H:%M:%S')" >> docs/README.md
-        echo "" >> docs/README.md
-        echo "## Описание" >> docs/README.md
-        echo "Простой калькулятор с базовыми операциями." >> docs/README.md
-        echo "" >> docs/README.md
-        echo "## API Документация" >> docs/README.md
-        cat docs/calculator.md >> docs/README.md
+        # Показываем первые 20 строк документации
+        echo "📄 Первые строки документации:"
+        head -20 docs/README.md
     
     - name: Проверка изменений в документации
       id: check_changes
