--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,119 +1,223 @@
 name: CI/CD Pipeline
 
 on:
+
   push:
+
     branches: [ main, development ]
+
   pull_request:
+
     branches: [ main ]
 
+permissions:
+
+  contents: write
+
+  pull-requests: write
+
 jobs:
+
   test:
+
     name: Запуск тестов
+
     runs-on: ubuntu-latest
+
     
+
     steps:
+
     - name: Checkout кода
+
       uses: actions/checkout@v4
+
     
+
     - name: Настройка Python
+
       uses: actions/setup-python@v5
+
       with:
+
         python-version: '3.10'
+
     
+
     - name: Установка зависимостей
+
       run: |
+
         python -m pip install --upgrade pip
+
         pip install -r requirements.txt
+
     
+
     - name: Запуск unit-тестов
+
       run: |
+
         python -m unittest test_calculator.py -v
+
     
+
     - name: Запуск интеграционных тестов
+
       run: |
+
         echo "Запуск интеграционных тестов..."
+
         python -m unittest discover -s . -p "test_*.py" -v
 
   docs:
+
     name: Обновление документации
+
     runs-on: ubuntu-latest
+
     needs: test
+
     if: github.ref == 'refs/heads/development' || github.ref == 'refs/heads/main'
+
     
+
     steps:
+
     - name: Checkout кода
+
       uses: actions/checkout@v4
+
       with:
+
         fetch-depth: 0
+
     
+
     - name: Настройка Python
+
       uses: actions/setup-python@v5
+
       with:
+
         python-version: '3.10'
+
     
+
     - name: Установка зависимостей для документации
+
       run: |
+
         python -m pip install --upgrade pip
-        pip install pydoc-markdown
+
     
+
     - name: Генерация документации
+
       run: |
-        # Создаём директорию для документации
-        mkdir -p docs
+
+        # Запускаем Python скрипт для генерации документации
+
+        python generate_docs.py
+
         
-        # Генерируем документацию из docstrings
-        pydoc-markdown -m calculator > docs/calculator.md
+
+        # Показываем что сгенерировано
+
+        echo "📚 Содержимое docs/:"
+
+        ls -la docs/
+
         
-        # Добавляем заголовок и дату
-        echo "# Документация проекта Calculator" > docs/README.md
-        echo "" >> docs/README.md
-        echo "**Дата обновления:** $(date '+%Y-%m-%d %H:%M:%S')" >> docs/README.md
-        echo "" >> docs/README.md
-        echo "## Описание" >> docs/README.md
-        echo "Простой калькулятор с базовыми операциями." >> docs/README.md
-        echo "" >> docs/README.md
-        echo "## API Документация" >> docs/README.md
-        cat docs/calculator.md >> docs/README.md
+
+        # Показываем первые 20 строк документации
+
+        echo "📄 Первые строки документации:"
+
+        head -20 docs/README.md
+
     
+
     - name: Проверка изменений в документации
+
       id: check_changes
+
       run: |
+
         git config user.name "github-actions[bot]"
+
         git config user.email "github-actions[bot]@users.noreply.github.com"
+
         
+
         git add docs/
+
         
+
         if git diff --staged --quiet; then
+
           echo "changes=false" >> $GITHUB_OUTPUT
+
           echo "Нет изменений в документации"
+
         else
+
           echo "changes=true" >> $GITHUB_OUTPUT
+
           echo "Обнаружены изменения в документации"
+
         fi
+
     
+
     - name: Создание Pull Request с документацией
+
       if: steps.check_changes.outputs.changes == 'true'
+
       uses: peter-evans/create-pull-request@v6
+
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+
+        token: ${{ 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 }}
+
         commit-message: "docs: автоматическое обновление документации"
+
         branch: docs/auto-update-${{ github.run_number }}
+
         delete-branch: true
+
         title: "📚 Автоматическое обновление документации"
+
         body: |
+
           ## Автоматически сгенерированная документация
+
           
+
           Этот PR был автоматически создан GitHub Actions.
+
           
+
           ### Изменения:
+
           - Обновлена документация на основе docstrings
+
           - Дата генерации: ${{ github.event.head_commit.timestamp }}
+
           
+
           ### Коммит:
+
           - SHA: ${{ github.sha }}
+
           - Ветка: ${{ github.ref_name }}
+
           
+
           **Проверьте изменения перед слиянием!**
+
         labels: |
+
           documentation
+
           automated
