--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, development ]
+    branches: [ main, development, release/** ]
   pull_request:
     branches: [ main ]
 
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout кода
-      uses: actions/checkout@v4
+    - name: Клонирование репозитория
+      uses: actions/checkout@v3
     
-    - name: Настройка Python
-      uses: actions/setup-python@v5
+    - name: Установка Python
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'
     
@@ -25,88 +25,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
-    - name: Запуск unit-тестов
+    - name: Запуск тестов
       run: |
-        python -m unittest test_calculator.py -v
+        python -m pytest test_calculator.py -v --cov=calculator --cov-report=term
     
-    - name: Запуск интеграционных тестов
+    - name: Проверка стиля кода
       run: |
-        echo "Запуск интеграционных тестов..."
-        python -m unittest discover -s . -p "test_*.py" -v
-
-  docs:
-    name: Обновление документации
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/development' || github.ref == 'refs/heads/main'
-    
-    steps:
-    - name: Checkout кода
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    
-    - name: Настройка Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
-    
-    - name: Установка зависимостей для документации
-      run: |
-        python -m pip install --upgrade pip
-    
-    - name: Генерация документации
-      run: |
-        # Запускаем Python скрипт для генерации документации
-        python generate_docs.py
-        
-        # Показываем что сгенерировано
-        echo "📚 Содержимое docs/:"
-        ls -la docs/
-        
-        # Показываем первые 20 строк документации
-        echo "📄 Первые строки документации:"
-        head -20 docs/README.md
-    
-    - name: Проверка изменений в документации
-      id: check_changes
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        
-        git add docs/
-        
-        if git diff --staged --quiet; then
-          echo "changes=false" >> $GITHUB_OUTPUT
-          echo "Нет изменений в документации"
-        else
-          echo "changes=true" >> $GITHUB_OUTPUT
-          echo "Обнаружены изменения в документации"
-        fi
-    
-    - name: Создание Pull Request с документацией
-      if: steps.check_changes.outputs.changes == 'true'
-      uses: peter-evans/create-pull-request@v6
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: "docs: автоматическое обновление документации"
-        branch: docs/auto-update-${{ github.run_number }}
-        delete-branch: true
-        title: "📚 Автоматическое обновление документации"
-        body: |
-          ## Автоматически сгенерированная документация
-          
-          Этот PR был автоматически создан GitHub Actions.
-          
-          ### Изменения:
-          - Обновлена документация на основе docstrings
-          - Дата генерации: ${{ github.event.head_commit.timestamp }}
-          
-          ### Коммит:
-          - SHA: ${{ github.sha }}
-          - Ветка: ${{ github.ref_name }}
-          
-          **Проверьте изменения перед слиянием!**
-        labels: |
-          documentation
-          automated
+        pip install flake8
+        flake8 calculator.py --max-line-length=100 --ignore=E501
