--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-# Нет внешних зависимостей
-# Используются только встроенные модули Python
-
+pytest==7.4.3
+pytest-cov==4.1.0
+pdoc==14.1.0
+pytest>=7.0.0
+pytest-cov>=4.0.0
