--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,10 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, development, release/** ]
-  pull_request:
-    branches: [ main ]
+    branches: [main, development]
 
 permissions:
   contents: write
-  pages: write
-  id-token: write
   pull-requests: write
 
 jobs:
@@ -34,29 +30,39 @@ jobs:
         run: |
           python -m pytest -v --cov=. --cov-report=term-missing
 
-      - name: Generate Test Report
-        if: always()
-        run: |
-          echo "# Test Report" > test-report.md
-          echo "Date: $(date)" >> test-report.md
-          echo "Branch: ${{ github.ref_name }}" >> test-report.md
-          echo "" >> test-report.md
-          python -m pytest -v || true
-
       - name: Linting (flake8)
         run: flake8 .
 
-      - name: Upload Test Report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-report
-          path: test-report.md
-
-  create-pr:
+  update-docs:
     needs: test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/development' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/development'
+    permissions:
+      contents: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Generate Docs
+        run: |
+          python generate_docs.py
+
+      - name: Commit updated docs
+        run: |
+          git config user.name "github-actions"
+          git config user.email "bot@github.com"
+          git add docs/
+          git commit -m "📝 Auto-update documentation" || echo "No changes in docs"
+          git push origin development
+
+  create-pr:
+    needs: update-docs
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/development'
     permissions:
       contents: write
       pull-requests: write
@@ -70,64 +76,27 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "Checking for existing PR..."
           EXISTING_PR=$(gh pr list --base main --head development --json number --jq '.[0].number')
 
           if [ -z "$EXISTING_PR" ]; then
-            echo "Creating new PR..."
             gh pr create \
               --base main \
               --head development \
               --title "🔀 Auto PR: development → main" \
-              --body "Автоматический PR после прохождения тестов."
+              --body "Автоматическое обновление документации и кода."
           else
-            echo "PR already exists: #$EXISTING_PR"
+            echo "PR already exists (#$EXISTING_PR)"
           fi
 
-      - name: Enable Auto-Merge
+      - name: Auto-Merge PR
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           PR_NUMBER=$(gh pr list --base main --head development --json number --jq '.[0].number')
 
           if [ -z "$PR_NUMBER" ]; then
-            echo "No PR found."
+            echo "No PR found"
             exit 0
           fi
 
-          echo "Auto-merging PR #$PR_NUMBER..."
           gh pr merge "$PR_NUMBER" --squash --auto --delete-branch=false
-
-  documentation:
-    needs: test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Generate Docs
-        run: |
-          python generate_docs.py
-          ls -la docs/
-
-      - name: Deploy Docs
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
-          force_orphan: true
-
-      - name: Upload Docs Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: documentation
-          path: docs/
